--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,8 @@ h1, h2, h3, h4, h5, h6, p, ul {
 
 .page-header {
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
+    background: #fff;
 }
 
 .header-container {
@@ -99,7 +101,25 @@ margin: 0 auto;
     font-weight: 500;
     line-height: 1.5;
     color:  #2e2f42;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
+
+.nav-link.current {
+        position: relative;
+    }
+.nav-link.current::after {
+    content: "";
+
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #404bbf;
+}
+
 
 .contacts 
 {   
@@ -121,12 +141,14 @@ margin: 0 auto;
     letter-spacing: 0.02em;
     line-height: 1.5;
     color: #434455;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-link:hover,
 .contacts-link:focus, 
 .nav-link:hover,
-.nav-link:focus {
+.nav-link:focus, 
+.nav-link.current {
     letter-spacing: 0.02em;
     color: #404bbf;
 }
