--- a/css/styles.css
+++ b/css/styles.css
@@ -236,6 +236,17 @@ ul
 .feature-item 
 {
     width: calc((100% - 72px) / 4);
+    text-align: center;
+}
+
+.feature-icon {
+    display: block;
+    margin: 0 auto 10px; 
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+    width: 264px;
+    height: 112px;
+    background: #f4f4fd;
 }
 
 .feature-title 
