--- a/css/styles.css
+++ b/css/styles.css
@@ -155,18 +155,23 @@ margin: 0 auto;
 
 .section-main 
 {
-    background-color: #2e2f42;
     padding: 188px 0 188px;
+    background: 
+        linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), 
+        url('../images/people-office-min.jpg') center/cover no-repeat; 
+    height: 600px; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 .section-main-title 
 {
-    background: #2e2f42;
     font-size: 56px;
     line-height: 1.07;
     letter-spacing: 0.02em;
     max-width: 496px;
-    text-align: center;
     color: #ffffff;
     margin-left: 472px;
     margin-right: 0;
