--- a/css/styles.css
+++ b/css/styles.css
@@ -173,8 +173,8 @@ margin: 0 auto;
     letter-spacing: 0.02em;
     max-width: 496px;
     color: #ffffff;
-    margin-left: 472px;
-    margin-right: 0;
+    margin: 0 auto 48px;
+    padding-top: 0;
 }
 
 .section-main-button  
@@ -188,13 +188,14 @@ margin: 0 auto;
     box-sizing: border-box;
     cursor: pointer;
     margin-top: 48px;
-    margin-left: 633px;
+    margin-left: auto;
+    margin-right: auto;
     padding: 16px 32px;
     min-width: 169px;
     height: 56px;
     border: none;
-    align-items: flex-start;
     flex-direction: row;
+    align-items: flex-start;
     gap: 10px;
 }
 
