--- a/css/styles.css
+++ b/css/styles.css
@@ -341,22 +341,28 @@ ul
 
 .social-list {
     display: flex;
-    align-items: center;
     justify-content: center;
-    flex-direction: row;
     gap: 24px;
-    width: ((100% - 3 * 24px) / 4);
-    height: 40px;
 }
 
 .social-item {
+    width: 40px;
+    height: 40px;
+    background: #4d5ae5;
+    border-radius: 50%;
     
-    display:inline-block;
 }
 
 .social-icon {
-    width: 40px;
-    height: 40px;
+    height: 16px;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 12px;
+    margin-top: 12px;
+    fill: #FFFFFF;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
  
