--- a/css/styles.css
+++ b/css/styles.css
@@ -399,8 +399,21 @@ ul
 }
 
 .portfolio-item 
-{   
+{   position: relative;
     width: calc((100% - 48px) / 3);
+    overflow: hidden;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+.portfolio-item img {
+    width: 100%;
+    height: auto;
+    display: block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-item:hover {
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
 }
 
 .portfolio-content {
