--- a/css/styles.css
+++ b/css/styles.css
@@ -398,6 +398,10 @@ ul
     row-gap: 48px;
 }
 
+li:hover .overlay {
+    transform: translateY(0%);
+}
+
 .portfolio-item 
 {   position: relative;
     width: calc((100% - 48px) / 3);
@@ -405,6 +409,27 @@ ul
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
+
+.portfolio-overlay {
+    position: absolute;
+    bottom: -100%; 
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 255, 0.7);
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 20px;
+    transition: bottom 0.3s ease-in-out;
+}
+
+.portfolio-item:hover .portfolio-overlay {
+    bottom: 0; /* Плавно виїжджає вгору */
+}
+
 .portfolio-item img {
     width: 100%;
     height: auto;
