--- a/css/styles.css
+++ b/css/styles.css
@@ -416,7 +416,7 @@ li:hover .overlay {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 255, 0.7);
+    background: rgba(44, 44, 160, 0.7);
     color: white;
     display: flex;
     align-items: center;
@@ -427,7 +427,7 @@ li:hover .overlay {
 }
 
 .portfolio-item:hover .portfolio-overlay {
-    bottom: 0; /* Плавно виїжджає вгору */
+    bottom: 0;
 }
 
 .portfolio-item img {
@@ -466,6 +466,9 @@ li:hover .overlay {
 
 .page-footer 
 {
+    display: flex;
+    justify-content: space-between; 
+    gap: 120px;
     background-color: #2e2f42;
     padding: 100px 0;
 }
@@ -497,12 +500,21 @@ li:hover .overlay {
     max-width: 264px;
 }
 
+.footer-socials-title {
+    font: 500 16px / 1.5 "Roboto", sans-serif;
+    letter-spacing: 0.02em;
+    color: #fff;
+    width: 96px;
+    height: 24px;
+}
+
 .footer-socials {
     display: flex;
-    gap: 15px;
-    list-style: none;
-    padding: 0;
-}
-.footer-socials-title {
-    
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: row;
+    margin-top: 16px;
+    gap: 16px;
+    width: 208px;
+    height: 40px;
 }
