--- a/css/styles.css
+++ b/css/styles.css
@@ -159,23 +159,27 @@ margin: 0 auto;
     background: 
         linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), 
         url('../images/people-office-min.jpg') center/cover no-repeat; 
-    height: 600px; 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+        background-repeat: no-repeat;
+        height: 600px; 
+        max-width: 1440px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        background-position: center;
+        background-size: cover; 
 }
 
 .section-main-title 
 {
-    font-size: 56px;
-    line-height: 1.07;
-    letter-spacing: 0.02em;
-    max-width: 496px;
-    color: #ffffff;
-    margin: 0 auto 48px;
-    padding-top: 0;
-}
+        font-size: 56px;
+        line-height: 1.07;
+        letter-spacing: 0.02em;
+        max-width: 496px;
+        color: #ffffff;
+        margin: 0 auto 48px;
+        padding-top: 0;
+    }
 
 .section-main-button  
 {   
@@ -197,6 +201,7 @@ margin: 0 auto;
     flex-direction: row;
     align-items: flex-start;
     gap: 10px;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .section-main-button:hover,
@@ -231,6 +236,17 @@ ul
     padding: 120px 0;
 }
 
+.feature-icon-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    border: 1px solid #8e8f99;
+    margin-bottom: 8px;
+}
+
 .features-list 
 {
     list-style: none;  
@@ -247,10 +263,7 @@ ul
 .feature-icon {
     display: block;
     margin: 0 auto 10px; 
-    border: 1px solid #8e8f99;
     border-radius: 4px;
-    width: 264px;
-    height: 112px;
     background: #f4f4fd;
 }
 
@@ -271,12 +284,6 @@ ul
     letter-spacing: 0.02em;
     color: #434455;
 } 
-
-.section-portfolio 
-{
-    padding-top: 120px; 
-    padding-bottom: 120px; 
-}
 
 .section-team 
 {   
@@ -303,6 +310,7 @@ ul
     display: flex;
     gap: 24px;
     flex-direction: row;
+    justify-content: center;
     padding: auto;
 }
 
@@ -350,8 +358,22 @@ ul
     height: 40px;
     background: #4d5ae5;
     border-radius: 50%;
-    
 }
+
+.social-item a {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--primary-color, #4d5ae5);
+    border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .social-item a:hover, 
+  .social-item a:focus {
+    background-color: #404bbf;
+  }
 
 .social-icon {
     height: 16px;
@@ -363,9 +385,13 @@ ul
     margin-top: 12px;
     fill: #FFFFFF;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
- 
+
+.section-portfolio 
+{
+    padding-top: 120px; 
+    padding-bottom: 120px; 
+}
 .portfolio-main-title 
 { 
     font-size: 36px;
@@ -407,6 +433,7 @@ li:hover .overlay {
     width: calc((100% - 48px) / 3);
     overflow: hidden;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -425,9 +452,22 @@ li:hover .overlay {
     padding: 20px;
     transition: bottom 0.3s ease-in-out;
 }
+.portfolio-overlay-text {
+    position: absolute; 
+    top: 0; 
+    font-size: 16px; 
+    line-height: 1.5; 
+    letter-spacing: 0.02em; 
+    color: #f4f4fd;
+    padding: 40px 32px; 
+    background-color: #4d5ae5; 
+    height: 100%; 
+    width: 100%;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
 
 .portfolio-item:hover .portfolio-overlay {
-    bottom: 0;
+bottom: 0;
 }
 
 .portfolio-item img {
@@ -464,17 +504,23 @@ li:hover .overlay {
     color: #434455;
 }
 
-.page-footer 
-{
+.page-footer {
     display: flex;
-    justify-content: space-between; 
-    gap: 120px;
+    justify-content: flex-start; 
+    align-items: flex-start;
     background-color: #2e2f42;
     padding: 100px 0;
+    gap: 120px;
 }
 
-.footer-logo 
-{
+
+.footer-content {
+    display: flex;
+    flex-direction: column;
+    margin-left: 156px;
+}
+
+.footer-logo {
     font-family: "Raleway", sans-serif;
     font-size: 18px;
     font-weight: 700;
@@ -487,34 +533,60 @@ li:hover .overlay {
     margin-bottom: 16px;
 }
 
-.footer-logo-part 
-{
+.footer-logo-part {
     color: #f4f4fd;
 }
 
-.footer-text 
-{
+.footer-text {
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #F4F4FD;
+    color: #f4f4fd;
     max-width: 264px;
 }
 
+.footer-socials-container {
+    display: flex;
+    flex-direction: column;
+    margin-left: 120px;
+}
+
 .footer-socials-title {
-    font: 500 16px / 1.5 "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
     letter-spacing: 0.02em;
     color: #fff;
+    margin-bottom: 16px;
     width: 96px;
     height: 24px;
 }
 
-.footer-socials {
+.socials-list {
     display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    flex-direction: row;
-    margin-top: 16px;
     gap: 16px;
-    width: 208px;
+}
+
+.social-item {
+    width: 40px;
     height: 40px;
+}
+
+.social-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-link:hover,
+.social-link:focus {
+    background-color: #31d0aa;
+}
+
+.social-icon {
+    fill: #f4f4fd;
 }
