--- a/css/styles.css
+++ b/css/styles.css
@@ -162,6 +162,7 @@ margin: 0 auto;
         background-repeat: no-repeat;
         height: 600px; 
         max-width: 1440px;
+        width: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -507,9 +508,10 @@ bottom: 0;
 .page-footer {
     display: flex;
     justify-content: flex-start; 
-    align-items: flex-start;
+    align-items: baseline;
     background-color: #2e2f42;
     padding: 100px 0;
+    margin-right: 120px;
     gap: 120px;
 }
 
