--- a/css/styles.css
+++ b/css/styles.css
@@ -479,7 +479,10 @@ bottom: 0;
 }
 
 .portfolio-item:hover {
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 
+                0px 1px 1px rgba(46, 47, 66, 0.16), 
+                0px 2px 1px rgba(46, 47, 66, 0.08);
+
 }
 
 .portfolio-content {
