--- a/css/styles.css
+++ b/css/styles.css
@@ -498,7 +498,7 @@ bottom: 0;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
-    }
+    transform: translateY(0%);}
 
 .portfolio-text 
 {
