--- a/css/styles.css
+++ b/css/styles.css
@@ -202,7 +202,8 @@ margin: 0 auto;
     flex-direction: row;
     align-items: flex-start;
     gap: 10px;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 
 .section-main-button:hover,
@@ -360,6 +361,15 @@ ul
     background: #4d5ae5;
     border-radius: 50%;
 }
+.social-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+}
 
 .social-item a {
     width: 100%;
@@ -392,6 +402,11 @@ ul
 {
     padding-top: 120px; 
     padding-bottom: 120px; 
+}
+
+.container-portfolio {
+    position: relative; 
+    overflow: hidden; 
 }
 .portfolio-main-title 
 { 
@@ -465,6 +480,7 @@ li:hover .overlay {
     height: 100%; 
     width: 100%;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+    transform: translateY(100%); 
 }
 
 .portfolio-item:hover .portfolio-overlay {
@@ -489,6 +505,7 @@ bottom: 0;
     border: 1px solid #e7e9fc; 
     border-top: none;
     padding: 32px 16px; 
+    transform: translateY(0%);
 }
 
 .portfolio-title-small 
@@ -523,6 +540,7 @@ bottom: 0;
     display: flex;
     flex-direction: column;
     margin-left: 156px;
+    margin-right: 120px 
 }
 
 .footer-logo {
