--- a/css/styles.css
+++ b/css/styles.css
@@ -202,8 +202,7 @@ margin: 0 auto;
     flex-direction: row;
     align-items: flex-start;
     gap: 10px;
-    transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);    
 }
 
 .section-main-button:hover,
@@ -505,8 +504,7 @@ bottom: 0;
     border: 1px solid #e7e9fc; 
     border-top: none;
     padding: 32px 16px; 
-    transform: translateY(0%);
-}
+ }
 
 .portfolio-title-small 
 {
