--- a/css/styles.css
+++ b/css/styles.css
@@ -354,12 +354,6 @@ ul
     gap: 24px;
 }
 
-.social-item {
-    width: 40px;
-    height: 40px;
-    background: #4d5ae5;
-    border-radius: 50%;
-}
 .social-link {
     display: flex;
     align-items: center;
@@ -370,7 +364,7 @@ ul
     border-radius: 50%;
 }
 
-.social-item a {
+.social-item {
     width: 100%;
     height: 100%;
     display: flex;
@@ -380,8 +374,8 @@ ul
     border-radius: 50%;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-  .social-item a:hover, 
-  .social-item a:focus {
+  .social-item:hover, 
+  .social-item:focus {
     background-color: #404bbf;
   }
 
