--- a/css/styles.css
+++ b/css/styles.css
@@ -14,25 +14,19 @@ h1,h3
     color: #2E2F42;
 }
 
-.page-header 
-{
-    font-size: 18px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    background-color: #ffffff;
-}
-
 h1, h2, h3, h4, h5, h6, p, ul {
     margin: 0;
     padding:0;
     list-style: none;
-
 }
 
 .page-header {
     border-bottom: 1px solid #e7e9fc;
     box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
     background: #fff;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
 }
 
 .header-container {
@@ -159,7 +153,6 @@ margin: 0 auto;
     background: 
         linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), 
         url('../images/people-office-min.jpg') center/cover no-repeat; 
-        background-repeat: no-repeat;
         height: 600px; 
         max-width: 1440px;
         width: 100%;
@@ -167,8 +160,6 @@ margin: 0 auto;
         align-items: center;
         justify-content: center;
         text-align: center;
-        background-position: center;
-        background-size: cover; 
 }
 
 .section-main-title 
@@ -290,7 +281,6 @@ ul
 {   
     background-color: #F4F4FD;
     padding: 120px 0;
-    display:inline-block;
     flex-wrap: nowrap;
     width: 100%;
 }
@@ -312,7 +302,6 @@ ul
     gap: 24px;
     flex-direction: row;
     justify-content: center;
-    padding: auto;
 }
 
 .team-item 
@@ -364,7 +353,7 @@ ul
     border-radius: 50%;
 }
 
-.social-item {
+.social-item a {
     width: 100%;
     height: 100%;
     display: flex;
@@ -374,8 +363,8 @@ ul
     border-radius: 50%;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-  .social-item:hover, 
-  .social-item:focus {
+  .social-item a:hover, 
+  .social-item a:focus {
     background-color: #404bbf;
   }
 
@@ -391,18 +380,16 @@ ul
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.section-portfolio 
-{
-    padding-top: 120px; 
-    padding-bottom: 120px; 
+.section-portfolio {
+    padding: 120px 0;
 }
 
 .container-portfolio {
-    position: relative; 
-    overflow: hidden; 
+    position: relative;
+    overflow: hidden;
 }
-.portfolio-main-title 
-{ 
+
+.portfolio-main-title {
     font-size: 36px;
     font-weight: 500;
     line-height: 1.11;
@@ -413,104 +400,81 @@ ul
     margin-bottom: 72px;
 }
 
-.portfolio-title 
-{
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-    color: #2e2f42;
-    margin-bottom: 8px
-}
-
-.portfolio-list 
-{
+.portfolio-list {
     list-style: none;
     display: flex;
     flex-wrap: wrap;
     column-gap: 24px;
     row-gap: 48px;
+    padding: 0;
+    margin: 0;
 }
 
-li:hover .overlay {
-    transform: translateY(0%);
-}
-
-.portfolio-item 
-{   position: relative;
+.portfolio-item {
+    position: relative;
     width: calc((100% - 48px) / 3);
     overflow: hidden;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
+.portfolio-item:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+                0px 1px 1px rgba(46, 47, 66, 0.16),
+                0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-item:hover .portfolio-overlay-text {
+    transform: translateY(0%);
 }
 
 .portfolio-overlay {
     position: absolute;
-    bottom: -100%; 
+    bottom: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(44, 44, 160, 0.7);
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    padding: 20px;
-    transition: bottom 0.3s ease-in-out;
-}
-.portfolio-overlay-text {
-    position: absolute; 
-    top: 0; 
-    font-size: 16px; 
-    line-height: 1.5; 
-    letter-spacing: 0.02em; 
-    color: #f4f4fd;
-    padding: 40px 32px; 
-    background-color: #4d5ae5; 
-    height: 100%; 
-    width: 100%;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
-    transform: translateY(100%); 
+    overflow: hidden;
 }
 
-.portfolio-item:hover .portfolio-overlay {
-bottom: 0;
+.portfolio-overlay-text {
+    position: absolute;
+    top: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    padding: 40px 32px;
+    background-color: #4d5ae5;
+    height: 100%;
+    width: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-item img {
     width: 100%;
     height: auto;
     display: block;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.portfolio-item:hover {
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 
-                0px 1px 1px rgba(46, 47, 66, 0.16), 
-                0px 2px 1px rgba(46, 47, 66, 0.08);
-
 }
 
 .portfolio-content {
-    border: 1px solid #e7e9fc; 
+    border: 1px solid #e7e9fc;
     border-top: none;
-    padding: 32px 16px; 
- }
+    padding: 32px 16px;
+}
 
-.portfolio-title-small 
-{
+.portfolio-title {
+    font-size: 20px;
     font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
+    line-height: 1.2;
     letter-spacing: 0.02em;
-    color: #434455;
-    transform: translateY(0%);}
+    text-transform: capitalize;
+    color: #2e2f42;
+    margin-bottom: 8px;
+}
 
-.portfolio-text 
-{
+.portfolio-title-small {
+    font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
@@ -532,7 +496,7 @@ bottom: 0;
     display: flex;
     flex-direction: column;
     margin-left: 156px;
-    margin-right: 120px 
+    margin-right: 120px;
 }
 
 .footer-logo {
