--- a/css/styles.css
+++ b/css/styles.css
@@ -152,7 +152,7 @@ margin: 0 auto;
     padding: 188px 0 188px;
     background: 
         linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), 
-        url('../images/people-office-min.jpg') center/cover no-repeat; 
+        url('../images/people-office-min.jpg'); 
         height: 600px; 
         max-width: 1440px;
         width: 100%;
@@ -160,6 +160,9 @@ margin: 0 auto;
         align-items: center;
         justify-content: center;
         text-align: center;
+        background-repeat: no-repeat; 
+        background-position: center;
+        background-size: cover; 
 }
 
 .section-main-title 
@@ -343,16 +346,6 @@ ul
     gap: 24px;
 }
 
-.social-link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    background-color: #4d5ae5;
-    border-radius: 50%;
-}
-
 .social-item a {
     width: 100%;
     height: 100%;
@@ -363,6 +356,7 @@ ul
     border-radius: 50%;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
+  
   .social-item a:hover, 
   .social-item a:focus {
     background-color: #404bbf;
