--- a/css/styles.css
+++ b/css/styles.css
@@ -476,21 +476,26 @@ body {
         color: #434455;
     }
     
-    .page-footer {
-        display: flex;
-        justify-content: flex-start; 
+.page-footer {
         background-color: #2e2f42;
         padding: 100px 0;
+}
+
+.footer-container {
+        display: flex;
+        align-items: baseline;
+        max-width: 1440px;
+        margin: 0 auto;
+        padding: 0 15px;
+}
+
+.footer-content {
         margin-right: 120px;
-        gap: 120px;
-    }
-    
-    
-    .footer-content {  
-         margin-right: 120px;
-    }
-    
-    .footer-logo {
+}
+
+.footer-logo {
+        display: inline-block;
+        margin-bottom: 16px;
         font-family: "Raleway", sans-serif;
         font-size: 18px;
         font-weight: 700;
@@ -499,57 +504,42 @@ body {
         text-transform: uppercase;
         color: #4d5ae5;
         text-decoration: none;
-        display: inline-block;
-        margin-bottom: 16px;
-    }
-    
-    .footer-logo-part {
+}
+
+.footer-logo-part {
         color: #f4f4fd;
-    }
-    
-    .footer-text {
+}
+
+.footer-text {
+        max-width: 264px;
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #f4f4fd;
-        max-width: 264px;
-    }
-    
-    .footer-container {
-        display: flex;
-        align-items: baseline;
-    }
+}
 
-    .footer-socials-container {
-        margin-left: 120px;
-        align-items: flex-start;
-        justify-content: flex-start;
-        flex-direction: row;
-        gap: 16px;
-    }
-    
-    .footer-socials-title {
+.social-title {
         font-weight: 500;
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;
-        color: #fff;
+        color: #ffffff;
         margin-bottom: 16px;
-    }
-    
-    .socials-list {
+}
+
+.social-list {
         display: flex;
         gap: 16px;
         list-style: none;
         padding: 0;
         margin: 0;
-    }
-    
-    .social-item {
+}
+
+.social-item {
         width: 40px;
         height: 40px;
     }
-    
-    .social-link {
+
+.social-link {
         display: flex;
         align-items: center;
         justify-content: center;
@@ -558,13 +548,13 @@ body {
         background-color: #4d5ae5;
         border-radius: 50%;
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
-    
-    .social-link:hover,
-    .social-link:focus {
+}
+
+.social-link:hover,
+.social-link:focus {
         background-color: #31d0aa;
-    }
-    
-    .social-icon {
+}
+
+.social-icon {
         fill: #f4f4fd;
-    }
+}
