--- a/css/styles.css
+++ b/css/styles.css
@@ -504,11 +504,6 @@ body {
     text-decoration: none;
 }
 
-.footer-logo:hover,
-.footer-logo:focus {
-    background-color: #31d0aa; 
-}
-
 .footer-logo-part {
     color: #f4f4fd;
 }
@@ -552,12 +547,11 @@ body {
     border-radius: 50%;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .social-item:hover,
 .social-item:focus {
     background-color: #31d0aa;
+    border-radius: 50%;
 }
-
 .social-icon {
     fill: #f4f4fd;
 }
