--- a/css/styles.css
+++ b/css/styles.css
@@ -547,10 +547,11 @@ body {
     border-radius: 50%;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.social-item:hover,
-.social-item:focus {
+.social-item .social-link:hover,
+.social-item .social-link:focus {
     background-color: #31d0aa;
     border-radius: 50%;
+
 }
 .social-icon {
     fill: #f4f4fd;
