--- a/css/styles.css
+++ b/css/styles.css
@@ -537,7 +537,7 @@ body {
     height: 40px;
     }
 
-.social-link {
+.social-link-footer {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -547,12 +547,11 @@ body {
     border-radius: 50%;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.social-item .social-link:hover,
-.social-item .social-link:focus {
+.social-item:hover .social-link-footer,
+.social-item:focus .social-link-footer {
     background-color: #31d0aa;
-    border-radius: 50%;
-
 }
+
 .social-icon {
     fill: #f4f4fd;
 }
